- Added 'set_horizontal' and 'set_vertical' methods to the embedding property.
- Fixed crash on empty tk::Grid container, added constraints() property to the tk::Grid widget.
- Added parse() method to all enumeration properties.
- Fixed knob behaviour which didn't trigger SLOT_CHANGE event when dragging knob's scale.
- Added ipadding() property for internal padding of the tk::Group widget.
- Fixed bugs reladed to SLOT_CHANGE notification delivery for tk::Switch widget.
- Added drawing mode for the widget that allows to switch between different kinds of widget look.
- Added basic background color inheritance support to widgets.
- Rendering of graph widget has been fixed and enhanced with "border.flat" property.
- Replaced text_border property for tk::Group widget with text_padding property.
- Added heading property for tk::Group widget.
- Replaced text_border property for tk::ComboGroup widget with text_padding property.
- Added heading property for tk::ComboGroup widget.
- Fixed missing builtin styles for tk::ComboGroup widget.
- Added spin_spacing property to tk::ComboGroup widget.
- Added 'balance_color', 'balance_color_custom', 'flat' and 'scale_marks' properties to the tk::Knob widget.
- Added font scaling feature to the tk::Font property.
- Added freetype2 library dependencies for UNIX-compatible operating systems.
- Added possibility to specify custom fonts in the stylesheet data.
- Added font loading support by the tk::Schema object.
- Fixed bug in menu item allocation that could yield to ugly-looking menus.
- Implemented proper UI schema loading at the runtime.
- Added tk::Registry class for managing widgets.
- Denied copy constructor usage for all widget classes.
- Added tk::Bevel widget which allows to draw bevels/facets in the UI.
- Added tk::Arrangement property which allows to arrange some element inside of another.

TODO:
- Add custom mouse pointer for fraction actions.

=== 0.5.0 ===
* Initial release.